--- a/AndroidLab8/app/src/main/res/layout/activity_department.xml
+++ b/AndroidLab8/app/src/main/res/layout/activity_department.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.androidlab8.DepartmentActivity">
 
-    <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="9dp">
+    <TextView
+        android:id="@+id/txtDepartment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:text="Department"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/txtDepartment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Department"
-            android:textColor="@android:color/holo_red_dark"
-            android:textSize="24sp" />
+    <ListView
+        android:id="@+id/listViewDepartment"
+        android:layout_width="match_parent"
+        android:layout_height="567dp"
+        android:layout_below="@+id/txtDepartment"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="52dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtDepartment"
+        tools:layout_editor_absoluteX="0dp" />
 
-        <ListView
-            android:id="@+id/listViewDepartment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/txtDepartment"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp" />
-    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
